--- a/app-nia-catalog/src/main/AndroidManifest.xml
+++ b/app-nia-catalog/src/main/AndroidManifest.xml
@@ -28,12 +28,67 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.NiaCatalog">
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
+
+        <meta-data
+            android:name="asset_statements"
+            android:resource="@string/asset_statements" />
+
+        <activity
+            android:name="com.google.androidbrowserhelper.trusted.LauncherActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:exported="true">
+
+           <!-- Edit android:value to change the url opened by the Trusted Web Activity -->
+           <meta-data
+               android:name="android.support.customtabs.trusted.DEFAULT_URL"
+               android:value="https://airhorner.com" />
+            <meta-data android:name="android.support.customtabs.trusted.SPLASH_IMAGE_DRAWABLE"
+                android:resource="@mipmap/ic_launcher_round"/>
+            <meta-data android:name="android.support.customtabs.trusted.SPLASH_SCREEN_BACKGROUND_COLOR"
+                android:resource="@color/colorPrimary"/>
+            <meta-data android:name="android.support.customtabs.trusted.SPLASH_SCREEN_FADE_OUT_DURATION"
+                android:value="300"/>
+            <meta-data android:name="android.support.customtabs.trusted.FILE_PROVIDER_AUTHORITY"
+                android:value="com.google.samples.apps.niacatalog.fileprovider"/>
+
+           <!-- This intent-filter adds the Trusted Web Activity to the Android Launcher -->
+           <intent-filter>
+               <action android:name="android.intent.action.MAIN" />
+               <category android:name="android.intent.category.LAUNCHER" />
+           </intent-filter>
+
+           <!--
+             This intent-filter allows the Trusted Web Activity to handle Intents to open
+             airhorner.com.
+           -->
+           <intent-filter>
+               <action android:name="android.intent.action.VIEW"/>
+               <category android:name="android.intent.category.DEFAULT" />
+               <category android:name="android.intent.category.BROWSABLE"/>
+
+               <!-- Edit android:host to handle links to the target URL-->
+               <data
+                 android:scheme="https"
+                 android:host="airhorner.com"/>
+           </intent-filter>
+        </activity>
+
+        <provider
+            android:authorities="com.google.samples.apps.niacatalog.fileprovider"
+            android:name="androidx.core.content.FileProvider"
+            android:grantUriPermissions="true"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/filepaths" />
+        </provider>
+
     </application>
 
 </manifest>
